# win_wildcard

./: .gitignore  README-pypi.md  README.md  setup.cfg
samples/: expand_args.py  show_args.py
win_wildcard/: __init__.py
