[metadata]
name = win_wildcard
version = 0.5.1
description = Expand wildcards in shells of Windows using the dir or the Get-ChildItem command
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/win_wildcard
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = Public Domain
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Public Domain
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    psutil
